# bux2

./: CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/ISSUE_TEMPLATE/: bug_report.md
src/: lib.rs  main.rs
src/cli/: generate.rs  mod.rs  process.rs
src/read/: dependencies.rs  extensions.rs  mod.rs  package.rs  target.rs  test.rs  toolchain.rs
src/write/: bootstrap.rs  buildfile.rs  manifest.rs  mod.rs  repos.rs  root.rs  testscript.rs
